--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background: url(/assets/img/BgSemeie.svg) no-repeat;
+    background: url(assets/img/BgSemeie.svg) no-repeat;
     background-size: cover;
 }
 
